trying to fix click even on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -376,7 +376,7 @@ select {
   border: none;
   outline: none;
   border-radius: 15px;
-  
+  cursor: pointer;
 }
 
 #recognize-button-container {
